--- a/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
@@ -53,14 +53,14 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-open-sign" translatesAutoresizingMaskIntoConstraints="NO" id="bCQ-GP-ba1">
-                                <rect key="frame" x="117" y="145" width="180" height="180"/>
+                                <rect key="frame" x="137" y="105" width="140" height="140"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="AqJ-zV-7WC"/>
+                                    <constraint firstAttribute="height" constant="140" id="AqJ-zV-7WC"/>
                                     <constraint firstAttribute="width" secondItem="bCQ-GP-ba1" secondAttribute="height" multiplier="1:1" id="hls-Pc-T5v"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bX-ac-HTa">
-                                <rect key="frame" x="30" y="333" width="354" height="0.0"/>
+                                <rect key="frame" x="30" y="253" width="354" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -82,10 +82,10 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Pp-0I-vb7">
-                                <rect key="frame" x="20" y="380.5" width="374" height="399.5"/>
+                                <rect key="frame" x="20" y="300.5" width="374" height="479.5"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nrj-hZ-Nj2">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="399.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="479.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LatestRoastBoastTVC" rowHeight="113" id="96l-gz-M7G" customClass="LatestRoastBoastTableViewCell" customModule="Pear" customModuleProvider="target">
@@ -106,25 +106,26 @@
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8l-PG-huu">
-                                                                    <rect key="frame" x="66" y="12" width="38" height="19.5"/>
+                                                                    <rect key="frame" x="66" y="12" width="254" height="19.5"/>
                                                                     <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcN-I4-I4Y">
-                                                                    <rect key="frame" x="322.5" y="11" width="43.5" height="22"/>
-                                                                    <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XcN-I4-I4Y">
+                                                                    <rect key="frame" x="328" y="12" width="38" height="19.5"/>
+                                                                    <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                                                     <color key="textColor" white="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fxa-xs-sRP">
-                                                                    <rect key="frame" x="66" y="45" width="300" height="51.5"/>
+                                                                    <rect key="frame" x="66" y="43.5" width="300" height="53"/>
                                                                     <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
                                                                     <color key="textColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                             <constraints>
+                                                                <constraint firstItem="XcN-I4-I4Y" firstAttribute="leading" secondItem="k8l-PG-huu" secondAttribute="trailing" constant="8" id="0lk-WP-j1C"/>
                                                                 <constraint firstItem="k8l-PG-huu" firstAttribute="top" secondItem="JTl-ny-pOB" secondAttribute="top" constant="12" id="6vd-IF-UrR"/>
                                                                 <constraint firstItem="pTM-H8-3RB" firstAttribute="top" secondItem="JTl-ny-pOB" secondAttribute="top" constant="8" id="9Tp-V5-Efr"/>
                                                                 <constraint firstItem="Fxa-xs-sRP" firstAttribute="top" secondItem="XcN-I4-I4Y" secondAttribute="bottom" constant="12" id="CqV-tQ-QRY"/>
@@ -165,7 +166,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Latest" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYV-it-c8L">
-                                <rect key="frame" x="20" y="345" width="51" height="23.5"/>
+                                <rect key="frame" x="20" y="265" width="51" height="23.5"/>
                                 <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -175,7 +176,7 @@
                         <constraints>
                             <constraint firstItem="p6t-xb-Gct" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" id="0iX-PN-haY"/>
                             <constraint firstItem="bCQ-GP-ba1" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="0yK-9G-eDN"/>
-                            <constraint firstItem="bCQ-GP-ba1" firstAttribute="top" secondItem="p6t-xb-Gct" secondAttribute="bottom" constant="40" id="7AZ-pT-2ep"/>
+                            <constraint firstItem="bCQ-GP-ba1" firstAttribute="top" secondItem="p6t-xb-Gct" secondAttribute="bottom" id="7AZ-pT-2ep"/>
                             <constraint firstItem="8bX-ac-HTa" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="30" id="7bu-2v-4j8"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="8bX-ac-HTa" secondAttribute="trailing" constant="30" id="9vo-Ia-ksH"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="7Pp-0I-vb7" secondAttribute="trailing" constant="20" id="DYG-9T-BcR"/>
