--- a/Pear/Controllers/Chat Tab/Chat Request Table View Controller/ChatRequestsTableViewController.storyboard
+++ b/Pear/Controllers/Chat Tab/Chat Request Table View Controller/ChatRequestsTableViewController.storyboard
@@ -33,17 +33,17 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2x8-SS-i6c">
-                                                    <rect key="frame" x="19" y="19" width="229" height="229"/>
+                                                    <rect key="frame" x="19" y="19" width="174" height="174"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Azx-od-zQR">
-                                                            <rect key="frame" x="0.0" y="0.0" width="229" height="229"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="174" height="174"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="Azx-od-zQR" secondAttribute="height" multiplier="1:1" id="kA2-zE-yZS"/>
                                                                 <constraint firstAttribute="width" constant="60" id="pkH-rm-3o0"/>
                                                             </constraints>
                                                         </imageView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WI5-zA-RDN">
-                                                            <rect key="frame" x="0.0" y="0.0" width="229" height="229"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="174" height="174"/>
                                                             <connections>
                                                                 <action selector="thumbnailImageClicked:" destination="FWt-50-gCh" eventType="touchUpInside" id="6Og-oC-pfW"/>
                                                             </connections>
@@ -63,19 +63,19 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fk-UC-s4l">
-                                                    <rect key="frame" x="260" y="23" width="42" height="21"/>
+                                                    <rect key="frame" x="205" y="23" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hyr-kk-pvS">
-                                                    <rect key="frame" x="310" y="23" width="42" height="21"/>
+                                                    <rect key="frame" x="255" y="23" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wth-X1-IeN">
-                                                    <rect key="frame" x="260" y="52" width="92" height="192"/>
+                                                    <rect key="frame" x="205" y="52" width="92" height="137"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -105,16 +105,50 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fMW-un-H0W">
+                                <rect key="frame" x="36" y="270" width="303" height="127"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W6L-ek-laY">
+                                        <rect key="frame" x="112.5" y="0.0" width="78" height="78"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="W6L-ek-laY" secondAttribute="height" multiplier="1:1" id="kmZ-ns-Act"/>
+                                            <constraint firstAttribute="width" constant="78" id="p9F-5p-rtx"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have no chats. Go wave to some people!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kn3-v3-LiD">
+                                        <rect key="frame" x="4" y="82" width="295" height="41"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Kn3-v3-LiD" firstAttribute="top" secondItem="W6L-ek-laY" secondAttribute="bottom" constant="4" id="2xU-VS-Ov8"/>
+                                    <constraint firstAttribute="bottom" secondItem="Kn3-v3-LiD" secondAttribute="bottom" constant="4" id="4PM-bW-Fkx"/>
+                                    <constraint firstItem="W6L-ek-laY" firstAttribute="top" secondItem="fMW-un-H0W" secondAttribute="top" id="J4S-i1-F50"/>
+                                    <constraint firstAttribute="trailing" secondItem="Kn3-v3-LiD" secondAttribute="trailing" constant="4" id="Mc6-UG-e55"/>
+                                    <constraint firstItem="W6L-ek-laY" firstAttribute="centerX" secondItem="fMW-un-H0W" secondAttribute="centerX" id="hUo-yX-JAQ"/>
+                                    <constraint firstItem="Kn3-v3-LiD" firstAttribute="leading" secondItem="fMW-un-H0W" secondAttribute="leading" constant="4" id="tor-ny-99Q"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="PdM-fm-U4W" firstAttribute="top" secondItem="GMw-jM-Kug" secondAttribute="bottom" id="8yX-ZJ-ZpL"/>
+                            <constraint firstItem="fMW-un-H0W" firstAttribute="centerY" secondItem="bUV-mL-fjR" secondAttribute="centerY" id="RXG-pq-opC"/>
+                            <constraint firstItem="fMW-un-H0W" firstAttribute="centerX" secondItem="bUV-mL-fjR" secondAttribute="centerX" id="Uqh-9L-hu3"/>
                             <constraint firstItem="GMw-jM-Kug" firstAttribute="top" secondItem="cIF-V7-mSY" secondAttribute="bottom" id="YCI-Mx-xd8"/>
+                            <constraint firstItem="fMW-un-H0W" firstAttribute="leading" secondItem="bUV-mL-fjR" secondAttribute="leadingMargin" constant="20" id="ZmI-e0-YDg"/>
                             <constraint firstAttribute="trailing" secondItem="GMw-jM-Kug" secondAttribute="trailing" id="guX-DC-lQ8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fMW-un-H0W" secondAttribute="trailing" constant="20" id="hfx-yT-pWD"/>
                             <constraint firstItem="GMw-jM-Kug" firstAttribute="leading" secondItem="bUV-mL-fjR" secondAttribute="leading" id="mDh-Up-zyd"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="noRequestsContainer" destination="fMW-un-H0W" id="7KR-3L-vH8"/>
+                        <outlet property="noRequestsImage" destination="W6L-ek-laY" id="T2r-ce-n0Z"/>
+                        <outlet property="noRequestsText" destination="Kn3-v3-LiD" id="zDI-60-3XH"/>
                         <outlet property="tableView" destination="GMw-jM-Kug" id="lCG-sj-AdP"/>
                     </connections>
                 </viewController>
